2009-05-25  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: Fix Abort to happen at the "right" 
	moments (fix DRT#289). Reduce the likelyness that FF deleted the 
	BrowserHttpWebResponse by caching the Status code earlier. Make
	header checks in CheckProtocolViolation case insensitive (and 
	remove the existing allocation from AllKeys).
	* BrowserHttpWebResponse.cs: Expose GetStatus as internal

2009-05-22  Sebastien Pouliot  <sebastien@ximian.com>

	* ClientAccessPolicy.cs: Implement ICrossDomainPolicy and
	fix scheme checks to verify the ports.
	* CrossDomainPolicyManager.cs: Add consts for the policy names
	* ICrossDomainPolicy.cs: New. Interface for policies.
	* PolicyDownloadPolicy.cs: New. Special policy used exclusively
	to download policies from web hosts.
	* SiteOfOriginPolicy.cs: New. Basic policy (always true) applied
	for the same "site of origin" requests.

2009-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* CrossDomainPolicyManager.cs: Download and process a socket 
	policy to see if a Socket.ConnectAsync request can be granted
	to application code.
	* ClientAccessPolicy.cs: Parse Silverlight policy file. Adapted
	from Atsushi's work in System.ServiceModel.dll

2009-05-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* BrowserHttpWebRequest.cs: Remove unused code (IsSameRangeKind).
	Remove duplicated code (already checked elsewhere). Add extra, 
	late header validations for GET (GetEndResponse). Fix DRT #533

2009-05-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* BrowserHttpWebRequest.cs: Fix condition (and compiler warning).

2009-05-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* BrowserHttpWebRequest.cs: Remove ContentType property (handled
	by ancestor) and set Content-Length correctly (and inside the 
	Headers too).

2009-05-11  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: Directly set Content-Length on the 
	native downloader (not in the headers). Should fix downloading